<resources>
    <string name="app_name">Restaurant</string>
    <string name="version">wersja 1.0</string>
    <string name="appInfo">Aplikacja daje możliwość wyboru dania, podania swoich danych osobowych, ocenienia firmy oraz wysłania szczegółów zamówienia naszym pracownikom!</string>
    <string name="appTitle">Składanie zamówienia w restauracji</string>
    <string name="menu">menu</string>
    <string name="ofertaDnia">oferta dnia</string>
    <string name="zupa1">Rosół z kury</string>
    <string name="zupa2">Zupa krem z brokułów</string>
    <string name="zupy">zupy</string>
    <string name="zupa3">Zupa dyniowa z grzankami</string>
    <string name="dania">dania</string>
    <string name="danie2">Pieczone żeberka</string>
    <string name="danie3">Duszone warzywa</string>
    <string name="danie4">Pierogi z truskawkami</string>
    <string name="danie1">Skrzydełka na ostro</string>
    <string name="desery">desery</string>
    <string name="deser1">Sernik z lodami</string>
    <string name="deser2">Muffinka czekoladowa</string>
    <string name="deser3">Puchar lodowy, owocowy</string>
    <string name="powrot">powrot</string>
    <string name="podsumowaniet">podsumowanie</string>
    <string name="dalej">dalej</string>
    <string name="imie">Imie</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="adres">Adres</string>
    <string name="numerTelefonu">Numer telefonu</string>
    <string name="zamowienie">ZAMÓWIENIE</string>
    <string name="infoZamowienie">Podsumowanie</string>
    <string name="daneOsobowe">DANE OSOBOWE</string>
    <string name="rate">Oceń naszą restaurację!</string>
    <string name="relative">relative</string>
    <string name="linear">linear</string>
    <string name="moreInfo">\@string/podaj wszystkie dane</string>
    <string name="bonAppetit">\@string/smacznego!</string>
    <string name="warning">\@string/nic nie zaznaczono!</string>
    <string name="music">muzyka</string>
    <string name="zamow">zamow</string>
</resources>
