<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anna.restaurant.Contact"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/imie"
        android:ems="10"
        android:id="@+id/clientName"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nazwisko"
        android:ems="10"
        android:id="@+id/clientSurname"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/adres"
        android:ems="10"
        android:id="@+id/clientAddress"
        android:layout_marginBottom="10dp"
 />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/numerTelefonu"
        android:ems="10"
        android:id="@+id/clientNumber"
        android:layout_marginBottom="50dp"
        android:maxLength="9" />


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchMusic"
        android:id="@+id/switchMusic"
        android:layout_marginLeft="5dp"
        android:text="@string/music"
        android:checked="false" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/relativeLayout">

    <Button
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:text="@string/powrot"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="openMenu"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/podsumowaniet"
        android:id="@+id/button6"
        android:layout_above="@+id/button8"
        android:onClick="sumUp"
        android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:text="@string/dalej"
            android:id="@+id/button7"
            android:layout_gravity="right"
            android:onClick="openOrder"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/button8" />
    </RelativeLayout>

</LinearLayout>
